--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = ["flit_core >=3.2,<4",
+	"python_version >= '3.9'"]
 build-backend = "flit_core.buildapi"
 
 [project]
