install requirements.txt instead of module

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,6 +16,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip 
           python -m pip install pytest==6.2.5
-          pip install Regression
+          pip install -r requirements.txt
       - name: Test with pytest
         run: python -m pytest -v test/*
