--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [build-system]
-requires = ["flit_core >=3.2,<4",
-	"python_version >= '3.9'"]
+requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
@@ -12,10 +11,10 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
 dependencies = [
 	"pytest>=6.2.5",
-	"numpy==1.20.3",
-	"pandas==1.3.4",
-	"matplotlib==3.4.3",
-	"scikit_learn==1.0.1"
+	"numpy>=1.20.3",
+	"pandas>=1.3.4",
+	"matplotlib>=3.4.3",
+	"scikit_learn>=1.0.1"
 ]
 
 [project.urls]
