--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-matplotlib==3.3.2
-numpy==1.19.2
-pandas==1.1.3
-scikit_learn==1.0.2
+matplotlib>=3.4.3
+numpy>=1.20.3
+pandas>=1.3.4
+scikit_learn>=1.0.1
